--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -38,8 +38,6 @@ brew "hledger"
 brew "less"
 # Better sqlite CLI
 brew "litecli"
-# Interact with LLM APIs easily
-brew "llm"
 # Markdown linter
 brew "markdownlint-cli"
 # Mac App Store CLI installer
@@ -66,8 +64,6 @@ brew "ripgrep"
 brew "sd"
 # Shell linter
 brew "shellcheck"
-# sqlite utils from simonw
-brew "sqlite-utils"
 # Command prompt
 brew "starship"
 # Better tail with syntax highlighting
@@ -92,7 +88,7 @@ cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
 # Better terminal
 cask "ghostty"
-# Various configurations
+# Personal automations
 cask "hammerspoon"
 # SVG editor
 cask "inkscape"
@@ -102,12 +98,8 @@ cask "mac-mouse-fix"
 cask "raycast"
 # VS Code
 cask "visual-studio-code"
-# Better terminal
-cask "wezterm"
 # Install Xcode easily
 cask "xcodes"
-# Zen web browser
-cask "zen-browser"
 # Zed editor
 cask "zed"
 
@@ -167,10 +159,5 @@ vscode "ecmel.vscode-html-css"
 vscode "vunguyentuan.vscode-css-variables"
 # Path autocompletion
 vscode "christian-kohler.path-intellisense"
-# GitHub Copilot
-vscode "GitHub.copilot-chat"
-vscode "GitHub.copilot"
 # Open in GitHub
 vscode "sysoev.vscode-open-in-github"
-# Svelte
-vscode "svelte.svelte-vscode"
