--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -161,3 +161,5 @@ vscode "vunguyentuan.vscode-css-variables"
 vscode "christian-kohler.path-intellisense"
 # Open in GitHub
 vscode "sysoev.vscode-open-in-github"
+# Lua support
+vscode "sumneko.lua"
