--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,3 +1,4 @@
 font-family = "FiraMono Nerd Font Mono"
 theme = "Tomorrow Night Bright"
 macos-titlebar-style = "tabs"
+command = "/opt/homebrew/bin/tmux"
