Revert "Remove tpm"
This reverts commit ee916e6fb9cfde3c6afe26a58bc241ef25519e05.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,14 @@
       create: true
       force: true
       path: .inputrc
+    ~/.tmux.conf:
+      create: true
+      force: true
+      path: .tmux.conf
+    ~/.tmux/plugins/tpm:
+      create: true
+      force: true
+      path: tpm
     ~/.markdownlintrc:
       create: true
       force: true
