--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,3 +2,4 @@ font-family = "FiraMono Nerd Font Mono"
 theme = "Tomorrow Night Bright"
 macos-titlebar-style = "tabs"
 command = "/opt/homebrew/bin/tmux"
+confirm-close-surface = false
