--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
 font-family = "FiraMono Nerd Font Mono"
 theme = "Tomorrow Night Bright"
 macos-titlebar-style = "tabs"
-command = "/opt/homebrew/bin/tmux"
+command = "/opt/homebrew/bin/fish"
 confirm-close-surface = false
