--- a/.gitconfig
+++ b/.gitconfig
@@ -22,13 +22,13 @@ rebase = false
   cb = "checkout -b"
   cm = "commit -m"
   cp = "cherry-pick"
-  d = "diff"
-  ds = "diff HEAD"
+  d = "diff --ignore-all-space"
+  ds = "diff HEAD --ignore-all-space"
   df = "!fish -c 'git_fzf_diff_file'"
   dfs = "!fish -c 'git_fzf_diff_file_staged'"
   db = "!fish -c 'git_fzf_diff_branch'"
   dbn = "!fish -c 'git_fzf_diff_branch_name_only'"
-  dm = "diff main"
+  dm = "diff main --ignore-all-space"
   dt = "difftool"
   dts = "difftool --staged"
   # https://kiranrao.ca/2024/06/21/git-config.html
