--- a/.config/gh/config.yml
+++ b/.config/gh/config.yml
@@ -7,7 +7,7 @@ prompt: enabled
 # A pager program to send command output to, e.g. "less". Set the value to "cat" to disable the pager.
 pager:
 # Aliases allow you to create nicknames for gh commands
-aliases: {}
+aliases: {pv: pr view -w, ps: pr status, pm: pr merge}
 # The path to a unix socket through which send HTTP connections. If blank, HTTP traffic will be handled by net/http.DefaultTransport.
 http_unix_socket:
 # What web browser gh should use when opening URLs. If blank, will refer to environment.
