--- a/.gitconfig
+++ b/.gitconfig
@@ -17,15 +17,10 @@ rebase = false
   bd = "!fish -c 'git_fzf_branch_delete'"
   c = "!fish -c 'git_fzf_checkout'"
   cam = "commit -a -m"
-  cap = "!fish -c 'git commit -a && git push'"
   camp = "!fish -c 'git_commit_all_message_push $argv'"
-  cb = "checkout -b"
-  cm = "commit -m"
-  cp = "cherry-pick"
   d = "diff --ignore-all-space"
   ds = "diff HEAD --ignore-all-space"
   df = "!fish -c 'git_fzf_diff_file'"
-  dfs = "!fish -c 'git_fzf_diff_file_staged'"
   db = "!fish -c 'git_fzf_diff_branch'"
   dbn = "!fish -c 'git_fzf_diff_branch_name_only'"
   dm = "diff main --ignore-all-space"
@@ -48,6 +43,10 @@ rebase = false
   rs = "!fish -c 'git_fzf_restore_staged'"
   rsw = "!fish -c 'git_fzf_restore_staged_worktree'"
   s = "status"
+  st = "stash"
+  std = "stash drop"
+  stp = "stash pop"
+  sts = "stash show -p"
   oops = "commit -a --no-edit --amend"
 [push]
   autoSetupRemote = true
