--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -1,5 +1,6 @@
 {
   "default": true,
   "line-length": false,
-  "single-trailing-newline": false
+  "single-trailing-newline": false,
+  "no-blanks-blockquote": false
 }
