--- a/settings.json
+++ b/settings.json
@@ -94,7 +94,8 @@
   // Turn off a couple annoying Markdownlint warnings
   "markdownlint.config": {
     "line-length": false,
-    "single-trailing-newline": false
+    "single-trailing-newline": false,
+    "no-blanks-blockquote": false
   },
   "typst-lsp.experimentalFormatterMode": "on",
   // Don't export PDF via typst-lsp; use typst watch instead
