--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -2,5 +2,6 @@
   "default": true,
   "line-length": false,
   "single-trailing-newline": false,
-  "no-blanks-blockquote": false
+  "no-blanks-blockquote": false,
+  "no-inline-html": false,
 }
