--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -3,5 +3,5 @@
   "line-length": false,
   "single-trailing-newline": false,
   "no-blanks-blockquote": false,
-  "no-inline-html": false,
+  "no-inline-html": false
 }
