--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .config/zed/embeddings
 .config/zed/prompts
 .config/configstore
+.config/op
 .config/gcloud
 .config/qBittorrent/
 .config/graphite/user_config
