--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
   rebase = false
 [alias]
   a = "add"
-  bd = "!fish -c 'git_fzf_branch_delete'"
+  bd = "branch -d"
   c = "!fish -c 'git_fzf_checkout'"
   cam = "commit -a -m"
   camp = "!fish -c 'git_commit_all_message_push $argv'"
