Remove all git_fzf functions

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,14 +15,14 @@
   rebase = false
 [alias]
   a = "add"
+  b = "branch"
   bd = "branch -d"
+  c = "switch"
   cam = "commit -a -m"
   camp = "!fish -c 'git_commit_all_message_push $argv'"
   d = "diff --ignore-all-space"
+  dn = "diff --name-only"
   ds = "diff HEAD --ignore-all-space"
-  df = "!fish -c 'git_fzf_diff_file'"
-  db = "!fish -c 'git_fzf_diff_branch'"
-  dbn = "!fish -c 'git_fzf_diff_branch_name_only'"
   dm = "diff main --ignore-all-space"
   dt = "difftool"
   dts = "difftool --staged"
@@ -34,14 +34,14 @@
   ld = "!f() { GIT_EXTERNAL_DIFF=difft git log -p --ext-diff $@; }; f"
   lp = "log --oneline -p"
   ls = "log --oneline --decorate"
-  m = "!fish -c 'git_fzf_merge'"
+  m = "merge"
   ma = "merge --abort"
   mc = "merge --continue"
   mm = "merge main --no-edit"
   mt = "mergetool"
-  r = "!fish -c 'git_fzf_restore'"
-  rs = "!fish -c 'git_fzf_restore_staged'"
-  rsw = "!fish -c 'git_fzf_restore_staged_worktree'"
+  r = "restore"
+  rs = "restore --staged"
+  rsw = "restore --staged --worktree"
   s = "status"
   st = "stash"
   std = "stash drop"
