--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -42,6 +42,8 @@ brew "litecli"
 brew "markdownlint-cli"
 # Mac App Store CLI installer
 brew "mas"
+# Environment manager
+brew "mise"
 # Better vim
 brew "neovim"
 # Up-to-date node
