--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
   a = "add"
   b = "branch"
   bd = "branch -d"
-  c = "switch"
+  c = "!fish -c 'git_fzf_checkout'"
   cb = "checkout -b"
   cm = "switch main"
   cam = "commit -a -m"
